# oxowlbot

./: .gitignore  .gitmodules  LICENSE  Procfile  README.md  app.json  manage.py  pyproject.toml  pyrightconfig.json  pytest  python  run
chatbot/: consumers.py  routing.py  tests.py  urls.py  views.py
chatbot/oxbot/: owl.py  oxbot.py
design/: README.md
owl/: littlePony.owl  wildlife.owl
oxbot/: answer.py  ontology.py  owl.py  oxbot.py  parsing.py  redirect.py  stanzaProvider.py  test_oxbot.py
oxbot/datatype/: pword.py
oxbot/recipe/: baseRecipe.py  classRecipe.py  pattern.py  relationRecipe.py  test_classRecipe.py  whoIsRecipe.py
oxbot/util/: cached_property.py  first.py  redirect.py
oxowlbot/: asgi.py  settings.py  urls.py  wsgi.py
oxowlbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
questionbot/: answer.py  context.py  lexic.py  lexicalFragment.py  main.py  matchableSentence.py  ontology.py  preprocessor.py  queryLogger.py  recipeRunner.py
questionbot/normal/: normal.py  normalSentence.py
questionbot/parsing/: normalSentence.py  pword.py  stanzaProvider.py
questionbot/recipe/: __init__.py  lemmaData.py  reaction.py  recipe.py  recipeGetter.py  runningRecipe.py
questionbot/stanza/: stanzaProvider.py
questionbot/util/: cached_property.py  eprint.py  flatten.py  log.py  panic.py  (+2 more)
script/: dev-install-chromium-driver.sh  download-stanza-en.sh  owlready-crash.py  start-redis.sh  webdriver-hello-world.py  wildlife-owl.py
web_server/: asgi.py  routing.py  settings.py  urls.py
web_server.egg-info/: SOURCES.txt  top_level.txt
(+296 files in other folders)
