[tool.poetry]
name = "oxowlbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
channels = "^2.4.0"
channels_redis = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
selenium = "^3.141.0"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
