[tool.poetry]
name = "oxowlbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.2"
django = "^3.0.5"
channels = "^2.4.0"
channels_redis = "^2.4.2"
daphne = "^2.4.1"
stanza = "^1.0.0"
owlready2 = "^0.23"
rdflib = "^4.2.2"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
ipython = "^7.13.0"
black = "^19.10b0"
django-stubs = "^1.5.0"
pytest = "^5.4.1"
pytest-xdist = "^1.31.0"
pytest-trio = "^0.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
